fixed last column alignment in page with sidebar

--- a/assets/sass/_theme/blocks/contact.sass
+++ b/assets/sass/_theme/blocks/contact.sass
@@ -72,3 +72,4 @@
                 &:last-child
                     text-align: right
                     margin-left: columns(1)
+                    flex: 1
